--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Logoipsum</title>
 </head>
+
 <body>
 	<header class="main-header">
-		<h1 class="main-header__logo"></h1>
-		<img src="img/svg/map.svg" alt="WorldMap">
-
+		<div class="container">
+			<nav class="main-header__nav">
+				<svg width="165" height="36">
+					<use xlink:href="sprite.svg#logo"></use>
+				 </svg>
+			</nav>
+			
+			
+		</div>
 	</header>
 </body>
+
+
 </html>
