--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 	<header class="main-header">
 		<div class="container">
 			<nav class="main-header__nav">
-				<svg width="165" height="36">
+				<svg class="main-header__logo" width="165" height="36">
 					<use xlink:href="sprite.svg#logo"></use>
+				 </svg>
+				 <svg class="main-header__menu" width="41" height="36" >
+					<use xlink:href="sprite.svg#menu"></use>
 				 </svg>
 			</nav>
 			
