--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
 						<use xlink:href="sprite.svg#logo"></use>
 					</svg>
 				</a>
+								<div class="nav-list-wrapper hidden">
+					<ul class="main-header__nav-list">
+						<li class="main-header__nav-item"><a href="">News</a></li>
+						<li class="main-header__nav-item"><a href="">Link</a></li>
+						<li class="main-header__nav-item"><a href="">Link</a></li>
+						<li class="main-header__nav-item"><a href="">Linsadaddak</a></li>
+						<li class="main-header__nav-item"><a href="">Link</a></li>
+					</ul>
+				</div>
+
 				<div class="main-header__nav-menu">
-					<svg class="main-header__menu" width="41" height="36">
+					<!-- <svg class="main-header__menu" width="41" height="36">
 						<use xlink:href="sprite.svg#menu"></use>
-					</svg>
-					<div class="toggle-menu">
-					</div>
+					</svg> -->
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</nav>
 			<div class="main-header__content-wrapper">
 				<div class="hello-content">
@@ -37,6 +50,7 @@
 			</div>
 		</div>
 	</header>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
