--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<use xlink:href="sprite.svg#logo"></use>
 					</svg>
 				</a>
-								<div class="nav-list-wrapper hidden">
+				<div class="nav-list-wrapper hidden">
 					<ul class="main-header__nav-list">
 						<li class="main-header__nav-item"><a href="">News</a></li>
 						<li class="main-header__nav-item"><a href="">Link</a></li>
@@ -50,6 +50,35 @@
 			</div>
 		</div>
 	</header>
+	<section class="features">
+		<div class="container features__container">
+			<div class="features__headline">
+				<h2 class="features__block-name">
+					What We Can do
+				</h2>
+				<p class="features__text">
+					Excepteur sint occaecat cupidatat non proident
+				</p>
+			</div>
+			<div class="features__content">
+				<div class="features__content-block">
+					<img src="img/svg/features-icon1.svg" alt="icon">
+					<h3>Web Development</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				</div>
+				<div class="features__content-block">
+					<img src="img/svg/features-icon2.svg" alt="icon">
+					<h3>Search Engine Optimization</h3>
+					<p>Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum</p>
+				</div>
+				<div class="features__content-block">
+					<img src="img/svg/features-icon3.svg" alt="icon">
+					<h3>Web Design</h3>
+					<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
