--- a/index.html
+++ b/index.html
@@ -60,27 +60,85 @@
 					Excepteur sint occaecat cupidatat non proident
 				</p>
 			</div>
-			<div class="features__content">
-				<div class="features__content-block">
+			<ul class="features__content">
+				<li class="features__content-block">
 					<img src="img/svg/features-icon1.svg" alt="icon">
 					<h3>Web Development</h3>
 					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				</div>
-				<div class="features__content-block">
+				</li>
+				<li class="features__content-block">
 					<img src="img/svg/features-icon2.svg" alt="icon">
 					<h3>Search Engine Optimization</h3>
-					<p>Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum</p>
-				</div>
-				<div class="features__content-block">
+					<p>Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam
+						vehicula ipsum</p>
+				</li>
+				<li class="features__content-block">
 					<img src="img/svg/features-icon3.svg" alt="icon">
 					<h3>Web Design</h3>
-					<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus.</p>
-				</div>
-			</div>
+					<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non
+						metus.</p>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<article class="video-wrapper" id="video">
+		<div class="video-control" id="video-play">
+			<img src="img/play-btn.png" alt="">
+		</div>
+		<div class="video-control" id="video-over"></div>
+		<video id="myVideo" muted preload="auto" poster="img/video-background.png">
+			<source src="" type="video/webm">
+			<source src="" type="video/mp4">
+		</video>
+	</article>
+	<section class="testimonials">
+		<div class="container testimonials__container">
+			<h1 class="testimonials__headline">Testimonials</h1>
+			<p class="testimonials__headline-text">Excepteur sint occaecat cupidatat non proident</p>
+			<ul class="testimonials__content">
+				<li class="testimonials__item">
+					<blockquote class="blockquote">
+						<p class="blockquote__text">Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur.</p>
+						<div class="blockquote__quote-owner-info">
+							<img src="img/quote-owner1.png" alt="" class="blockquote__photo">
+							<h4 class="blockquote__name">Dianne Russell</h4>
+							<p class="blockquote__post">Marketing Coordinator</p>
+						</div>
+					</blockquote>
+				</li>
+				<li class="testimonials__item">
+					<blockquote class="blockquote">
+						<p class="blockquote__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+						<div class="blockquote__quote-owner-info">
+							<img src="img/quote-owner2.png" alt="" class="blockquote__photo">
+							<h4 class="blockquote__name">Robert Johnson</h4>
+							<p class="blockquote__post">Graphic Designer</p>
+						</div>
+					</blockquote>
+				</li>
+				<li class="testimonials__item">
+					<blockquote class="blockquote">
+						<p class="blockquote__text">Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+						<div class="blockquote__quote-owner-info">
+							<img src="img/quote-owner3.png" alt="" class="blockquote__photo">
+							<h4 class="blockquote__name">Floyd Miles</h4>
+							<p class="blockquote__post">President of Sales</p>
+						</div>
+					</blockquote>
+				</li>
+			</ul>
+			<ul class="testimonials__slider">
+				<li class="testimonials__slider-item"></li>
+				<li class="testimonials__slider-item"></li>
+				<li class="testimonials__slider-item slider-item_active"></li>
+				<li class="testimonials__slider-item"></li>
+				<li class="testimonials__slider-item"></li>
+			</ul>
 		</div>
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
+	<script type="text/javascript" src="js/video.js"></script>
 </body>
 
 </html>
