--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<style>.hidden {transform: translateY(-300%);}</style>
 	<header class="main-header">
 		<div class="container main-header__container">
 			<nav class="main-header__nav">
@@ -32,9 +33,6 @@
 				</div>
 
 				<div class="main-header__nav-menu">
-					<!-- <svg class="main-header__menu" width="41" height="36">
-						<use xlink:href="sprite.svg#menu"></use>
-					</svg> -->
 					<span></span>
 					<span></span>
 					<span></span>
@@ -46,7 +44,7 @@
 					<h1 class="hello-content__text">Digital Marketing Agency</h1>
 					<button class="hello-content__button">Button</button>
 				</div>
-				<img src="/img/rocket.png" alt="rocket" class="hello-img">
+				<img src="img/rocket.png" alt="rocket" class="hello-img">
 			</div>
 		</div>
 	</header>
@@ -98,7 +96,8 @@
 			<ul class="testimonials__content">
 				<li class="testimonials__item">
 					<blockquote class="blockquote">
-						<p class="blockquote__text">Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur.</p>
+						<p class="blockquote__text">Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla
+							sed consectetur.</p>
 						<div class="blockquote__quote-owner-info">
 							<img src="img/quote-owner1.png" alt="" class="blockquote__photo">
 							<h4 class="blockquote__name">Dianne Russell</h4>
@@ -108,7 +107,8 @@
 				</li>
 				<li class="testimonials__item">
 					<blockquote class="blockquote">
-						<p class="blockquote__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+						<p class="blockquote__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+							doloremque laudantium.</p>
 						<div class="blockquote__quote-owner-info">
 							<img src="img/quote-owner2.png" alt="" class="blockquote__photo">
 							<h4 class="blockquote__name">Robert Johnson</h4>
@@ -118,7 +118,8 @@
 				</li>
 				<li class="testimonials__item">
 					<blockquote class="blockquote">
-						<p class="blockquote__text">Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+						<p class="blockquote__text">Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus,
+							porta ac consectetur ac, vestibulum at eros.</p>
 						<div class="blockquote__quote-owner-info">
 							<img src="img/quote-owner3.png" alt="" class="blockquote__photo">
 							<h4 class="blockquote__name">Floyd Miles</h4>
@@ -134,6 +135,30 @@
 				<li class="testimonials__slider-item"></li>
 				<li class="testimonials__slider-item"></li>
 			</ul>
+		</div>
+	</section>
+	<section class="skill-bars">
+		<div class="container skill-bars__container">
+			<img class="skill-bars__img" src="/img/skill-bats__image.png" alt="">
+			<div class="skill-bars__content">
+				<h3 class="skill-bars__headline">High Quality
+					for Your Experience</h3>
+					<p class="skill-bars__text">Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi.</p>
+					<ul class="skill-bars__list">
+						<li class="skill-bars__item">
+							<p>75% Completed</p>
+							<span class="bar"></span>
+						</li>
+						<li class="skill-bars__item">
+							<p>90% Completed</p>
+							<span class="bar"></span>
+						</li>
+						<li class="skill-bars__item">
+							<p>50% Completed</p>
+							<span class="bar"></span>
+						</li>
+					</ul>
+			</div>
 		</div>
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
