--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h1 class="hello-content__text">Digital Marketing Agency</h1>
 					<button class="hello-content__button">Button</button>
 				</div>
-				<img src="img/rocket.png" alt="rocket" class="hello-img">
+				<img width="550" height="490" src="img/rocket.png" alt="rocket" class="hello-img">
 			</div>
 		</div>
 	</header>
@@ -91,7 +91,7 @@
 	</article>
 	<section class="testimonials">
 		<div class="container testimonials__container">
-			<h1 class="testimonials__headline">Testimonials</h1>
+			<h2 class="testimonials__headline">Testimonials</h2>
 			<p class="testimonials__headline-text">Excepteur sint occaecat cupidatat non proident</p>
 			<ul class="testimonials__content">
 				<li class="testimonials__item">
@@ -139,10 +139,10 @@
 	</section>
 	<section class="skill-bars">
 		<div class="container skill-bars__container">
-			<img class="skill-bars__img" src="/img/skill-bats__image.png" alt="">
+			<img class="skill-bars__img" width="590" height="450" src="/img/skill-bats__image.png" alt="">
 			<div class="skill-bars__content">
-				<h3 class="skill-bars__headline">High Quality
-					for Your Experience</h3>
+				<h2 class="skill-bars__headline">High Quality
+					for Your Experience</h2>
 					<p class="skill-bars__text">Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi.</p>
 					<ul class="skill-bars__list">
 						<li class="skill-bars__item">
@@ -159,6 +159,29 @@
 						</li>
 					</ul>
 			</div>
+		</div>
+	</section>
+	<section class="faq">
+		<div class="container faq__container">
+			<div class="faq__content">
+				<h2 class="faq__headline">Frequently Asked Question</h2>
+				<p class="faq__text">Excepteur sint occaecat cupidatat non proident</p>
+				<ul class="faq__list">
+					<li class="faq__item">
+						<h4 class="faq__question">Sed ut perspiciatis unde omnis iste natus ?</h4>
+						<p class="faq__answer">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque.</p>
+					</li>
+					<li class="faq__item">
+						<h4 class="faq__question">Temporibus autem quibusdam et aut ?</h4>
+						<p class="faq__answer">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque.</p>
+					</li>
+					<li class="faq__item">
+						<h4 class="faq__question">Sed ut perspiciatis unde omnis iste natus ?</h4>
+						<p class="faq__answer">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque.</p>
+					</li>
+				</ul>
+			</div>
+			<img class="faq__img" width="590" height="520" src="img/faq__img.png" alt="">
 		</div>
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
