added mobile vers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h1 class="hello-content__text">Digital Marketing Agency</h1>
 					<button class="hello-content__button">Button</button>
 				</div>
-				<img width="550" height="490" src="img/rocket.png" alt="rocket" class="hello-img">
+				<img src="img/rocket.png" alt="rocket" class="hello-img">
 			</div>
 		</div>
 	</header>
@@ -94,7 +94,7 @@
 			<h2 class="testimonials__headline">Testimonials</h2>
 			<p class="testimonials__headline-text">Excepteur sint occaecat cupidatat non proident</p>
 			<ul class="testimonials__content">
-				<li class="testimonials__item">
+				<li class="testimonials__item testimonials__item_show">
 					<blockquote class="blockquote">
 						<p class="blockquote__text">Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla
 							sed consectetur.</p>
@@ -105,7 +105,7 @@
 						</div>
 					</blockquote>
 				</li>
-				<li class="testimonials__item">
+				<li class="testimonials__item testimonials__item_show">
 					<blockquote class="blockquote">
 						<p class="blockquote__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
 							doloremque laudantium.</p>
@@ -113,6 +113,17 @@
 							<img src="img/quote-owner2.png" alt="" class="blockquote__photo">
 							<h4 class="blockquote__name">Robert Johnson</h4>
 							<p class="blockquote__post">Graphic Designer</p>
+						</div>
+					</blockquote>
+				</li>
+				<li class="testimonials__item testimonials__item_show">
+					<blockquote class="blockquote">
+						<p class="blockquote__text">Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus,
+							porta ac consectetur ac, vestibulum at eros.</p>
+						<div class="blockquote__quote-owner-info">
+							<img src="img/quote-owner3.png" alt="" class="blockquote__photo">
+							<h4 class="blockquote__name">Floyd Miles</h4>
+							<p class="blockquote__post">President of Sales</p>
 						</div>
 					</blockquote>
 				</li>
@@ -127,6 +138,7 @@
 						</div>
 					</blockquote>
 				</li>
+
 			</ul>
 			<ul class="testimonials__slider">
 				<li class="testimonials__slider-item"></li>
@@ -139,9 +151,10 @@
 	</section>
 	<section class="skill-bars">
 		<div class="container skill-bars__container">
-			<img class="skill-bars__img" width="590" height="450" src="/img/skill-bats__image.png" alt="">
+			<img class="skill-bars__img" width="590" height="450" src="img/skill-bats__image.png" alt="">
+			<img class="skill-bars__img-mobile" width="380" height="380" src="img/skill-bats__image-mobile.png" alt="">
 			<div class="skill-bars__content">
-				<h2 class="skill-bars__headline">High Quality
+				<h2 class="skill-bars__headline">High Quality <br>
 					for Your Experience</h2>
 					<p class="skill-bars__text">Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi.</p>
 					<ul class="skill-bars__list">
@@ -181,9 +194,19 @@
 					</li>
 				</ul>
 			</div>
-			<img class="faq__img" width="590" height="520" src="img/faq__img.png" alt="">
+			<img class="faq__img" src="img/faq__img.png" alt="">
 		</div>
 	</section>
+	<section class="contacts">
+		<div class="container contacts__container">
+			<h2 class="contacts__headline">Grow Your Company Faster
+				Than Ever Before</h2>
+			<button class="contacts__button">Contact Us</button>
+		</div>
+	</section>
+	<footer class="main-footer">
+		<p class="main-footer__text">Copyright © 2022, Ratchanon</p>
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 	<script type="text/javascript" src="js/video.js"></script>
